@startuml

skinparam classAttributeIconSize 0

package "Moderator-Client" {

  class StoryEvent {
    {field} -eventId: int
    {field} -description: string
    {field} -parent: StoryEvent
    {field} -children: StoryEvent[]
    {method} +StoryEvent(parent: StoryEvent, id: int)
    {method} +addChild(): void
  }

  class StoryGraph {
    {field} -character: Character
    {field} -root: StoryEvent
    {field} -currentEvent: StoryEvent
    {method} +StoryGraph(id: int)
    {method} +loadGraphFromFile(filepath: string): Graph
    {method} +saveGraphToFile(filepath: string): void
    {method} +getNextPossibleEvent(): StoryEvent[]
    {method} +setCurrentEvent(newCurrentEvent: StoryEvent): void
    {method} +getNextStoryEventById(id: int): StoryEvent
  }

  class "ModeratorView" as mf {
    {field} -startedOnline: bool
    {method} +ModeratorView()
    {method} +pausePolling(val: bool): void
    {method} +offlineMode(val: bool): void
  }

  class "ModeratorClientExchange" as mcei{
    {field} -websocket: WebSocket
    {field} -authentificationGuid: Guid
    {field} -timeoutDuration: int
    {method} +ModeratorClientExchange()
    {method} +sendMessage(message: string): void
    {method} +evalJSON(json: string): bool
    {method} +getVotingResults(): int
    {method} +makeJSON(): string
    {method} +enterPassword(pw: string): void
  }

  class Skills {
    {field} -communication: int
    {field} -analytics: int
    {field} -partying: int
    {field} -programming: int
    {method} + Skills(commu: int, analy: int, party: int, progr: int)
    {method} + updateCommunicationSkill(value: int): void
    {method} + updateAnalyticsSkill(value: int): void
    {method} + updatePartyingSkill(value: int): void
    {method} + updateProgrammingSkill(value: int): void
  }

  class Character {
    {field} -abilities: Skills
    {field} -name: string
    {method} +Character()
  }
  
  StoryEvent "n" --* "1" StoryGraph
  StoryGraph -- mf
  StoryGraph -- Character
  Character -- Skills
  mf -- mcei
  StoryGraph --- mcei
}

package "Server" {
   

  package "ServerLogic" <<Rectangle>>{
    class "ServerShell" as ss {
      {field} +logger: Logger
      {field} -port: int
      {field} -runShell: bool
      {field} -serverShell: ServerShell
      {field} -streamReader: StreamReader
      {method} +ServerShell()
      {method} +startShell(): void
      {method} +stopShell(): void
      {method} +parseCommand(command: string): void
      {method} +showHelp(): void
      {method} +configPort(): void
      {method} +configCapacity(): void
      {method} +startServer(): void
      {method} +stopServer(): void
      {method} +main(args: string[]): void
    }

    class "ModeratorClientManager" as cm {
      {field} -webSocket: WebSocket
      {field} -ip: IPAddress
      {field} -port: int
      {field} -numberOfConnectedPlayerAudienceClients: int
      {field} +logger: Logger
      {field} -authentificationTokenModeratorClientHash: int
      {method} +ModeratorClientManager(): void
      {method} +disconnect(): void
      {method} +recieveMessage(message: string): void
      {method} +checkJSON(message: string): bool
      {method} +sendMessage(message: string): void
      {method} +sendVotingResults(results: Dictionary<Guid, int>): void
      {method} +evalJSON(json: string): string[]

    }    

    class "MainServerLogic" as msl {
      {field} -moderator: ModeratorClientManager
      {field} -playerAudience: PlayerAudienceClientManager
      {field} -timer: Timer
      {field} +logger: Logger
      {method} +MainServerLogic(capacity: int, port: int)
      {method} +onFalseMessage(message: string): void
      {method} +onVotingMessage(message: string): void
      {method} +updateModeratorClientManagerPlayerAudienceClientCountAttribute(): void
      {method} +startPollingTimer(): void
    }

    class "PlayerAudienceClientManager" as api {
        {field} -observerCollection: ArrayList<Observer>
        {field} -possibleDecisions: string[]
        {field} -voteCounter: Dictionary<int, int>
        {method} +PlayerAudienceClientManager()
        {method} +subscribeObserver(observer: Observer, cookie: Cookie): void
        {method} +unsubscribeObserver(observer: Observer): void
        {method} -notifyObservers(): void
        {method} +updatePossibleDecisions(decisions: Dictionary<Guid, string>): void
        {method} +evaluateVotes(): Dictionary<Guid, int>
  }

    class "ServerLogger" as sl <<Singleton>> {
      {field} +globalLogger: Logger
      {field} -logFile: StreamWriter
      {field} -isSetup: bool
      {field} -consoleHandler: Handler
      {method} -Logger()
      {method} +createNewLogger(): Logger
      {method} +setup(): void
      {method} +addHandler(logger: Logger): void
      {method} +setLevel(level: int): void
      {method} +setConsoleOutput(val: bool): void
    }
  }
  package "PlayerAudience-Client" <<Rectangle>>{  
    class "PlayerAudienceClientExchange" as pace <<Observer>>{
      {field} -sessionCookie: Cookie
      {field} -votingAllowed: bool
      {field} -selectedDecision: int
      {field} -possibleDecisions: Dictionary<Guid, string>
      {method} +PlayerAudienceClientExchange()
      {method} +update(): void
      {method} -hashifyStringToID(decision: string): int
    }

    class "PlayerAudienceView" as pav {
      {method} +PlayerAudienceView()
    }
  }
  ss -- msl
  msl - cm
  msl -down- api
  sl ... cm
  sl ... msl
  sl ... api
  sl ... ss
  pace -left- pav
  api "1" <-right- "n" pace : observes
}

mcei -right- cm

@enduml